<resources>

    <string name="app_name">繁城都市</string>

    <string name="action_settings">Settings</string>
    <string name="Insurance">本产品由中银保险有限公司责任承保</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <!-- Error messages -->
    <string name="title_activity_city">CityActivity</string>
    <string name="payBYAPK">APK接入</string>
    <string name="payBYJAR">JAR接入</string>
    <string name="title_activity_coupon">CouponActivity</string>
    <string name="tab_2">G</string>
    <string name="tab_3">B</string>
    <string name="tab_4">N</string>

    <string name="title_activity_topup_way">TopupAmountActivity</string>
    <string name="title_activity_topup_amount">title_activity_topup_amount</string>
    <string name="title_activity_return_recod">ReturnRecodActivity</string>
    <string name="title_activity_recharge_record">RechargeRecordActivity</string>

    <string name="psd">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ,.</string>
    <string name="limit_pay">0123456789</string>
    <string name="protocolContext">首部及导言\n为使用繁城都市软件（以下统称“本软件”）及服务，您请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款，以及开通或使用某项服务的单独协议，并选择接受或不接受。限制、免责条款可能以加粗形式提示您注意。
除非您已阅读并接受本协议所有条款，否则您无权下载、安装或使用本软件及相关服务。您的下载、安装、使用、登录等行为即视为您已阅读并同意本协议的约束。\n
一、协议的范围\n
1.1 协议适用主体范围\n
本协议是您与繁城都市间关于您下载、安装、使用、登录本软件，以及使用本服务所订立的协议。\n
本协议与上述内容存在冲突的，以本协议为准。\n
二、关于本服务\n
2.1 本服务内容\n
本服务内容是指繁城都市通过本软件向用户提供的相关服务（简称“本服务”）。\n
2.2 本服务形式\n
您可能可以通过手机等终端以客户端形式使用本服务，具体以繁城都市提供的为准，同时，繁城都市会不断丰富您使用本服务的终端、形式等。当您使用本服务时，您应选择与您的终端、系统等相匹配的本软件版本，否则，您可能无法正常使用本服务。\n
2.3 许可的范围\n
2.3.1 繁城都市给予您一项个人的、不可转让及非排他性的许可，以使用本软件。您可以为非商业目的在单一台终端设备上下载、安装、使用、登录本软件。\n
2.3.2 您可以制作本软件的一个副本，仅用作备份。备份副本必须包含原软件中含有的所有著作权信息。\n
2.3.3 本条及本协议其他条款未明示授权的其他一切权利仍由繁城都市保留，您在行使这些权利时须另外取得繁城都市的书面许可。繁城都市如果未行使前述任何权利，并不构成对该权利的放弃。\n
三、繁城都市账号\n
使用本软件您需要注册繁城都市账号。\n
四、软件的获取\n
4.1 您可以直接从繁城都市的网站上获取本软件，也可以从得到繁城都市授权的第三方获取。\n
4.2 如果您从未经繁城都市授权的第三方获取本软件或与本软件名称相同的安装程序，繁城都市无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。\n
五、软件的安装与卸载\n
5.1 繁城都市可能为不同的终端、系统等开发了不同的软件版本，您应当根据实际情况选择下载合适的版本进行安装。\n
5.2 下载安装程序后，您需要按照该程序提示的步骤正确安装。\n
5.3 为提供更加优质、安全的服务，在本软件安装时繁城都市可能推荐您安装其他软件，您可以选择安装或不安装。\n
5.4 如果您不再需要使用本软件或者需要安装新版软件，可以自行卸载。如果您愿意帮助繁城都市改进产品服务，请告知卸载的原因。\n
六、软件的更新\n
6.1 为了增进用户体验、完善服务内容，繁城都市将不断努力开发新的服务，并为您不时提供软件更新（这些更新可能会采取软件替换、修改、功能强化、版本升级等形式）。\n
6.2 本软件可能为您默认开启自动升级、更新等功能，您可以在软件设置中自行选择是否需要开启此功能。\n
6.3 为了改善用户体验，并保证服务的安全性和功能的一致性，繁城都市有权不经向您特别通知而对软件进行更新，或者对软件的部分功能效果进行改变或限制。\n
6.4 本软件新版本发布后，旧版本的软件可能无法使用。繁城都市不保证旧版本软件继续可用及相应的客户服务，请您随时核对并下载最新版本。\n
七、用户个人信息保护\n
7.1 保护用户个人信息是繁城都市的一项基本原则，繁城都市将会采取合理的措施保护用户的个人信息。除法律法规规定的情形外，未经用户许可繁城都市不会向第三方公开、透露用户个人信息。繁城都市对相关信息采用专业加密存储与传输方式，保障用户个人信息的安全。\n
7.2 您在注册帐号或使用本服务的过程中，可能需要填写一些必要的信息。若国家法律法规或政策有特殊规定的，您需要填写真实的身份信息。若您填写的信息不完整，则无法使用本服务或在使用过程中受到限制。\n
7.3 一般情况下，您可随时浏览、修改自己提交的信息，但出于安全性和身份识别的考虑，您可能无法修改注册时提供的初始注册信息及其他验证信息。\n
7.4 繁城都市将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。\n
八、用户行为规范\n
8.1 用户注意事项\n
8.1.1 您充分理解并同意：您在使用本服务某一特定服务时，本服务可以能需要使用您终端设备的相关权限、接口及相关设备信息等以才能实现相应的功能，某些特定服务可能还需同意单独的协议、规则等，您在使用该项服务前请仔细阅读前述相关协议、规则。\n
8.1.2 繁城都市有权在本服务中或通过本服务向您展现各种信息，包括但不限于广告信息、新闻信息及宣传信息等，该信息可能以系统消息或弹出窗口等形式出现。\n
8.1.3 您可以选择不向繁城都市提供您的某些信息，或者根据产品设置取消繁城都市收集某些信息，但因此可能会导致相关服务功能无法实现。\n
8.1.4 您理解并同意：繁城都市将会尽其商业上的合理努力保障您在本软件及服务中的数据存储安全，但是，繁城都市并不能就此提供完全保证，包括但不限于以下情形：\n
（1）繁城都市不对您在本软件及服务中相关数据的删除或储存失败负责；\n
（2）繁城都市有权根据实际情况自行决定您在本软件及服务中数据的最长储存期限、服务器中数据的最大存储空间等，您可根据自己的需要自行备份本软件及服务中的相关数据。双方另有约定的按相应约定执行；\n
（3）如果您停止使用本软件及服务或服务被终止或取消，繁城都市可以从服务器上永久地删除您的数据。您的服务停止、终止或取消后，繁城都市没有义务向您返还任何数据。\n
8.1.5 本软件内的运营活动均由繁城都市，除有特别声明外，活动中提供的奖品生产商（如奖品为苹果手机的苹果公司，下同）等均未参与本软件内的运营活动，活动中涉及到的奖品，也均由繁城都市自行购买。因运营活动产生纠纷的，由繁城都市在法律规定的范围内承担责任，与奖品生产商无关。因活动奖品质量产生纠纷的,按照相关法律规定处理。\n
8.1.6 您使用本服务时，本服务的内容可能会因您使用软件版本的不同而有差别，您理解并同意：\n
（1）当您在使用本软件的某些版本开通或进入繁城都市开发的应用分发类产品或应用分发类功能的相关页面时，此应用分发类产品或功能，为更好地向您提供终端设备上应用的升级提示等智能服务，可能会使用您终端设备上已经安装应用程序的版本信息、安装位置、大小等必要信息，具体以繁城都市实际提供的版本为准。\n
8.2 五不准\n
您在使用本服务时不得利用本服务从事以下行为，包括但不限于：\n
（1）发布、传送、传播、储存违反法律、危害国家安全统一、社会稳定、公序良俗、社会公德以及侮辱、诽谤、色情、暴力的内容；\n
（2）发布、传送、传播、储存侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的内容；\n
（3）虚构事实、隐瞒真相以误导、欺骗他人；\n
（4）发表、传送、传播广告信息及垃圾信息；\n
（5）从事其他违反法律法规、政策及公序良俗、社会公德等的行为。\n
8.3 用户禁止行为\n
除非法律允许或繁城都市书面许可，您不得从事下列行为：\n
（1）删除本软件及其副本上关于著作权的信息；\n
（2）对本软件进行反向工程、反向汇编、反向编译，或者以其他方式尝试发现本软件的源代码；\n
（3）对繁城都市拥有知识产权的内容进行使用、出租、出借、复制、修改、链接、转载、汇编、发表、出版、建立镜像站点等；\n
（4）对本软件或者本软件运行过程中释放到任何终端内存中的数据、软件运行过程中客户端与服务器端的交互数据，以及本软件运行所必需的系统数据，进行复制、修改、增加、删除、挂接运行或创作任何衍生作品，形式包括但不限于使用插件、外挂或非繁城都市经授权的第三方工具/服务接入本软件和相关系统；\n
（5）通过修改或伪造软件运行中的指令、数据，增加、删减、变动软件的功能或运行效果，或者将用于上述用途的软件、方法进行运营或向公众传播，无论这些行为是否为商业目的；\n
（6）通过非繁城都市开发、授权的第三方软件、插件、外挂、系统，登录或使用繁城都市软件及服务，或制作、发布、传播上述工具；\n
（7）自行、授权他人或利用第三方软件对本软件及其组件、模块、数据等进行干扰；\n
（8）其他未经繁城都市明示授权的行为。\n
8.4 对自己行为负责\n
您充分了解并同意，您必须为自己注册帐号下的一切行为负责，包括您所发表的任何内容以及由此产生的任何后果。您应对使用本服务时接触到的内容自行加以判断，并承担因使用内容而引起的所有风险，包括因对内容的正确性、完整性或实用性的依赖而产生的风险。繁城都市无法且不会对您因前述风险而导致的任何损失或损害承担责任。\n
8.5 违约处理\n
如果繁城都市发现或收到他人举报您有违反本协议约定的，繁城都市有权不经通知随时对相关内容进行删除、屏蔽，并采取包括但不限于暂停、终止您使用相应繁城都市账号，暂停、终止您使用部分或全部本服务，追究法律责任等措施。\n
8.6 对第三方损害的处理\n
您违反约定，导致任何第三方损害的，您应当独立承担责任；繁城都市因此遭受损失的，您也应当一并赔偿。\n
九、第三方提供的产品或服务\n
您在繁城都市平台上使用第三方提供的产品或服务时，除遵守本协议约定外，还应遵守第三方的用户协议。繁城都市和第三方对可能出现的纠纷在法律规定和约定的范围内各自承担责任。\n
因用户使用本软件或要求繁城都市提供特定服务时，本软件可能会调用第三方系统或者通过第三方支持用户的使用或访问，使用或访问的结果由该第三方提供（包括但不限于您通过本服务跳转到的第三方提供的服务及内容，第三方通过繁城都市开放平台接入的服务及内容等），繁城都市无法保证第三方提供服务及内容的安全性、准确性、有效性及其他不确定的风险，您应自行承担相关责任。\n
十、知识产权声明\n
10.1 繁城都市是本软件的知识产权权利人。本软件的著作权、商标权、专利权、商业秘密等知识产权，以及与本软件相关的所有信息内容（包括但不限于文字、图片、音频、视频、图表、界面设计、版面框架、有关数据或电子文档等）均受中华人民共和国法律法规和相应的国际条约保护，繁城都市依法享有上述相关知识产权，但相关权利人依照法律规定应享有的权利除外。\n
10.2 未经繁城都市或相关权利人书面同意，您不得为任何商业或非商业目的自行或许可任何第三方实施、利用、转让上述知识产权。\n
十一、终端安全责任\n
11.1 您理解并同意，本软件或本服务同大多数互联网软件、服务一样，可能会受多种因素影响（包括但不限于用户原因、网络服务质量、社会环境等）；也可能会受各种安全问题的侵扰（包括但不限于他人非法利用用户资料，进行现实中的骚扰；用户下载安装的其他软件或访问的其他网站中可能含有病毒、木马程序或其他恶意程序，威胁您终端的信息和数据的安全，继而影响本软件、本服务的正常使用等）。因此，您应加强信息安全及个人信息的保护意识，注意密码保护，以免遭受损失。\n
11.2 您不得制作、发布、使用、传播用于窃取繁城都市账号及他人个人信息、财产的恶意程序。\n
11.3 维护软件安全与正常使用是繁城都市和您的共同责任，繁城都市将按照行业标准合理审慎地采取必要技术措施保护您的终端信息和数据安全，但是您承认和同意繁城都市不能就此提供任何保证。\n
11.4 在任何情况下，您不应轻信借款、索要密码或其他涉及财产的网络信息。涉及财产操作的，请一定先核实对方身份，并请经常留意繁城都市有关防范诈骗犯罪的提示。\n
十二、第三方软件或技术\n
12.1 本软件可能会使用第三方软件或技术（包括本软件可能使用的开源代码和公共领域代码等，下同），这种使用已经获得合法授权。\n
12.2 本软件如果使用了第三方的软件或技术，繁城都市将按照相关法规或约定，对相关的协议或其他文件，可能通过本协议附件、在本软件安装包特定文件夹中打包等形式进行展示，它们可能会以“软件使用许可协议”、“授权协议”、“开源代码许可证”或其他形式来表达。前述通过各种形式展现的相关协议或其他文件，均是本协议不可分割的组成部分，与本协议具有同等的法律效力，您应当遵守这些要求。如果您没有遵守这些要求，该第三方或者国家机关可能会对您提起诉讼、罚款或采取其他制裁措施，并要求繁城都市给予协助，您应当自行承担法律责任。\n
十三、其他\n
13.1 您使用本软件或本服务即视为您已阅读并同意受本协议的约束。繁城都市有权在必要时修改本协议条款。您可以在本软件、本服务的最新版本中查阅相关协议条款。本协议条款变更后，如果您继续使用本软件、本服务，即视为您已接受修改后的协议。如果您不接受修改后的协议，应当停止使用本软件。
13.2 本协议签订地为中华人民共和国江苏省南京市雨花台区。\n
13.3 本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律（不包括冲突法）。\n
13.4 若您和繁城都市之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，您同意将纠纷或争议提交本协议签订地有管辖权的人民法院管辖。\n
13.5 本协议所有条款的标题仅为阅读方便，本身并无实际涵义，不能作为本协议涵义解释的依据。\n
13.6 本协议条款无论因何种原因部分无效或不可执行，其余条款仍有效，对双方具有约束力。\n</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_vip_train">VipTrainActivity</string>
    <string name="title_activity_merchant_preferential">MerchantPreferentialActivity</string>

    <!-- WXPayEntryActivity -->

    <string name="launch_from_wx">Launch From Weixin</string>

    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <string name="cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="gallery_all_folder">所有图片</string>
    <string name="gallery_shoot">拍摄照片</string>
    <string name="gallery_finish">( %1$d / %2$d )完成</string>
    <string name="gallery_gallery">相册</string>
    <string name="gallery_send">发送</string>
    <string name="gallery_msg_no_camera">没有系统相机</string>
    <string name="gallery_folder_name">文件夹名</string>
    <string name="gallery_photo_num">%d 张</string>

    <string name="confirm">确定</string>


    <!--我的-->

    <string name="login_register">登录 / 注册</string>
    <string name="my_money">账户余额: %1$f</string>
    <string name="my_integral">积分: %1$s</string>
    <string name="my_account_number">账号: %1$s</string>
    <string name="phone_number">%1$s</string>

    <string name="wait_a_moment">请稍等...</string>
    <string name="current_address">我在</string>
    <string name="select">选择</string>
    <string name="my_consumption">我消费</string>
    <string name="my_consumption_hint">请输入预计消费价格</string>
    <string name="yuan">元</string>
    <string name="btn_text">确定</string>
    <string name="btn_back_text">返回首页</string>
    <string name="btn_tobuy_text">去购买</string>
    <string name="btn_cacal">取消</string>

    <string name="main_hint">请输入有效价格</string>
    <!--首页-->
    <string name="business_history">交易历史</string>
    <string name="lift_serve">生活服务</string>
    <string name="my_coupon">我的卡劵</string>
    <string name="my_bus">公交</string>
    <string name="setting">设置</string>
    <string name="qcode_scan_remark">温馨提示：\n请注意核实您需要支付的总价，核实后再付款给商家。</string>
    <string name="qcode_scan">扫一扫</string>
    <string name="my_order">我的订单</string>
    <string name="scan_merchant_pay">扫码付款给商家</string>
    <string name="purchasable_coupon">可购买的劵</string>

    <!--选择城市-->
    <string name="search_hint_text">搜索城市名</string>
    <string name="Location_hint">定位失败</string>
    <!--城市列表-->
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="cp_hot_city">热门城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="hint_text">请输入关键字</string>

    <string name="more_discounts_btn_text">查看更多优惠</string>
    <string name="merchant_activity_text">商家活动</string>
    <string name="merchant_particulars_text">商家信息</string>

    <string name="to_deduction_btn_text">去抵扣</string>

    <string name="booking_order">预约下单</string>

    <string name="merchant_title_text">商家</string>
    <!-- 商家列表 tabTitles-->
    <string name="recently">离我最近</string>
    <string name="most_preferential">优惠最多</string>
    <string name="Intelligent_sorting">智能排序</string>

    <string name="pay_info_title">支付详情</string>
    <string name="pay_offer_desc">还需支付</string>
    <string name="order_money">订单金额</string>
    <string name="order_discout">本单折扣</string>
    <string name="order_offer">优惠金额</string>
    <string name="pay_total_money">支付总价</string>
    <string name="connent_out">网络连接超时</string>
    <string name="load_end">没有更多数据</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="loading">加载中...</string>
    <string name="my_title_text">我的</string>
    <!--系统消息-->
    <string name="system_messages">系统消息</string>
    <string name="pwd_hint_text">密码6~16位，至少包含数字和字母</string>

    <string name="agreementcontext">协议书是社会生活中，协作的双方或数方，为保障各自的合法权权益，经双发或数方共同协商达成一致意见后，签订的书面材料。协议书是契约文书的一种，是当事人双方（或多方）为了解决或预防纠纷，或确立某种法律关系,实现一低昂的共同利益、愿望，经过协商而达成一致后，签署的具有法律效益的记录性文书。\n
一、标题\n
标题可以写成"协议书"三字，也可以写明协议的具体名称"xxxx协议书"。\n
二、签订协议单位名称\n
在标题下，正文之前，写明签订协议单位名称，并在上方单位名称之后注明一方是甲方，一方是乙方，方便在正文中称呼\n
三、正文\n
1、正文包括开头、主题两部分。开头是交代签署协议的目的、原因、依据，紧接着可用程式化语言转入主题，如"现对有关事项达成协议如下"。主题要求就协议有关事宜作出明确的、全面的说明，尤其要着力写好协议双方的权利和义务。\n
2、正文条款内容\n
(1)协商目的\n
(2)协商目的的责任\n
(3)协商的时间和期限\n
(4)协商的条款和酬金{价格明确总额大写必须明确货币种类}\n
(5)履行条款期限\n
(6)违反条款的责任处理\n
四、落款
应写明协议双方单位的名称,并加盖公章。必要时还得写上签订单位和公证单位的名称，并加盖公章。最后写上签订协议的日期。\n

 </string>



</resources>
