<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">


    <include layout="@layout/main_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.amap.api.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/ib_postion"
                android:layout_centerInParent="true"
                android:background="@mipmap/icon_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_main_tool_background"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/tv_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/current_address"
                    android:textColor="@color/white_text"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@+id/tv_here"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:text="花神大道京妆商务"
                    android:textColor="@color/white_text"
                    android:textSize="16sp" />


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_e" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/tv_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/select"
                    android:textColor="@color/white_text"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@+id/tv_select"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/rg_main_type"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rb_home"
                            style="@style/mainRadioButtonStyle"
                            android:background="@drawable/select_main_type_btn"
                            android:checked="true"
                            android:text="加油" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rb_supermarket"
                            style="@style/mainRadioButtonStyle"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/select_main_type_btn"
                            android:text="商超" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:visibility="gone"
                            android:id="@+id/rb_accommodation"
                            style="@style/mainRadioButtonStyle"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/select_main_type_btn"
                            android:text="住宿" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/btn_more"
                        android:layout_width="45dp"
                        android:layout_height="25dp"
                        android:visibility="gone"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/shape_main_btn_background_normal"
                        android:text="更多"
                        android:textColor="@color/black_8"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/ibtn_voice"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:src="@mipmap/icon_voice" />
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_e" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/tv_consumption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/my_consumption"
                    android:textColor="@color/white_text"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/tv_consumption"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="1dp"
                        android:layout_height="30dp"
                        android:background="@color/app_theme_color" />

                    <EditText
                        android:id="@+id/edit_price"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:background="@null"
                        android:ellipsize="end"
                        android:hint="@string/my_consumption_hint"
                        android:inputType="numberDecimal"
                        android:maxLength="7"
                        android:maxLines="1"
                        android:textColor="@color/gray_e"
                        android:textColorHint="@color/main_hint_text_color"
                        android:textCursorDrawable="@drawable/shape_edittext_cursor"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="18dp"
                    android:text="@string/yuan"
                    android:textColor="@color/white_text"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/ibtn_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:src="@mipmap/icon_start_location" />

    </RelativeLayout>

    <include layout="@layout/main_bottom" />

</LinearLayout>
